opam-version: "2.0"
name: "irmin-website"
synopsis: "Public homepage of Irmin"
maintainer: "Craig Ferguson <me@craigfe.io>"
authors: "Craig Ferguson <me@craigfe.io>"
homepage: "https://github.com/tarides/irmin.org"
bug-reports: "https://github.com/tarides/irmin.org/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.7.0"}
  "irmin" {= "2.0.0" & with-test}
  "irmin-unix" {with-test}
  "digestif" {= "0.7.3"}
  "mdx" {>= "1.6.0"}
  "lwt" {with-test}
  "hiredis" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/tarides/irmin.org.git"
