opam-version: "2.0"
name: "irmin-website"
synopsis: "Public homepage of Irmin"
maintainer: "Craig Ferguson <me@craigfe.io>"
authors: "Craig Ferguson <me@craigfe.io>"
homepage: "https://github.com/tarides/irmin.org"
bug-reports: "https://github.com/tarides/irmin.org/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.7.0"}
  "irmin" {= "3.4" & with-test}
  "irmin-cli" {with-test}
  "digestif" {>= "1.0.0"}
  "mdx" {>= "1.8.1"}
  "lwt" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/tarides/irmin.org.git"
